--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -1,7 +1,5 @@
 #page-home {
   height: 100vh;
-
-  background: url("../../assets/home-background.svg") no-repeat 700px bottom;
 }
 
 #page-home .content {
@@ -12,12 +10,12 @@
   padding: 0 30px;
 
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: center;
 }
 
 #page-home .content header {
-  margin: 48px 0 0;
+  margin: -80px 0 160px;
 }
 
 #page-home .content main {
@@ -30,23 +28,25 @@
 }
 
 #page-home .content main h1 {
-  font-size: 54px;
+  font-size: 50px;
   color: var(--title-color);
+  font-weight: 700;
 }
 
 #page-home .content main p {
-  font-size: 24px;
+  font-size: 28px;
   margin-top: 24px;
-  line-height: 38px;
+  line-height: 46px;
 }
 
 #page-home .content main a {
   width: 100%;
   max-width: 360px;
   height: 72px;
-  background: var(--primary-color);
-  border-radius: 8px;
+  background: var(--secondary-color);
+  border-radius: 4px;
   text-decoration: none;
+  text-transform: uppercase;
 
   display: flex;
   align-items: center;
@@ -55,32 +55,44 @@
   margin-top: 40px;
 }
 
-#page-home .content main a span {
-  display: block;
-  background: rgba(0, 0, 0, 0.08);
-  width: 72px;
-  height: 72px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.2s;
-}
-
-#page-home .content main a span svg {
-  color: #fff;
-  width: 20px;
-  height: 20px;
-}
-
 #page-home .content main a strong {
   flex: 1;
   text-align: center;
+  font-weight: 700;
+  font-size: 18px;
   color: #fff;
 }
 
 #page-home .content main a:hover {
-  background: #2fb86e;
+  background: var(--primary-color);
+}
+
+#page-home .footer {
+  position: fixed;
+  bottom: 50px;
+  width: 100%;
+}
+
+#page-home .footer p {
+  text-align: center;
+  font-variant: small-caps;
+  font-size: 14px;
+  color: #71757b;
+}
+
+#page-home .footer p svg {
+  margin-bottom: -3px;
+}
+
+#page-home .footer p a {
+  font-variant: small-caps;
+  font-size: 14px;
+  color: #71757b;
+  text-decoration: none;
+}
+
+#page-home .footer p a:hover {
+  color: var(--primary-color);
 }
 
 @media (max-width: 900px) {
