--- a/web/src/App.css
+++ b/web/src/App.css
@@ -36,3 +36,10 @@ h6 {
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 900;
 }
+
+button {
+  font-variant: small-caps;
+  font-style: normal;
+  font-size: 16px;
+  text-transform: lowercase;
+}
